--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8"> <title>Moscownpur Generator</title>
+  <meta charset="UTF-8">
+  <title>Moscownpur Generator</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
@@ -9,10 +10,18 @@
 </head>
 <body>
   <div class="container">
-    <h3>Moscownpur AI</h3>
-    <p>Conjure a new post and copy it to your clipboard!</p>
-    <button id="generateBtn">✨ Conjure a Story</button>
-    <p id="status"></p>
+    <div class="header-panel">
+      <h3>Moscownpur AI</h3>
+      <p>Conjure a new post and copy it to your clipboard!</p>
+    </div>
+    
+    <div class="action-panel">
+      <button id="generateBtn">✨ Conjure a Story</button>
+    </div>
+    
+    <div class="status-panel">
+      <p id="status"></p>
+    </div>
   </div>
   <script src="popup.js"></script>
 </body>
